--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,10 @@
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zuul</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
@@ -48,5 +52,6 @@
 		<module>compute-service</module>
 		<module>compute-service1</module>
 		<module>feign</module>
+		<module>zuul</module>
 	</modules>
 </project>
