auth-server auth by zuul

--- a/auth-server/src/main/resources/application.yaml
+++ b/auth-server/src/main/resources/application.yaml
@@ -6,9 +6,23 @@
 #      id: user
 #      user-info-uri: http://auth-server/uaa/user # auth-server 是注册到eureka的服务名称
 #      prefer-token-info: false # 不使用/oauth/check_token,因为不能负载均衡 使用在auth-server端实现的 /user api.
-server.port: 5656
+server:
+  port: 5656
+  # Use different context-path to avoid session cookie overlapping
+  context-path: /uaa
+  use-forward-headers: false
 
-spring.application.name: auth-server
+spring:
+  application:
+    name: auth-server
 
 eureka.client.serviceUrl.defaultZone: http://localhost:1111/eureka/
-server.contextPath: /uaa
+
+
+# Define security
+security:
+  basic:
+    enabled: false
+  user:
+    password: password
+  ignored: /css/**,/js/**,/favicon.ico,/webjars/**
