--- a/compute-service1/pom.xml
+++ b/compute-service1/pom.xml
@@ -7,4 +7,11 @@
   </parent>
   <groupId>com.senyint</groupId>
   <artifactId>compute-service1</artifactId>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-oauth2</artifactId>
+    </dependency>
+  </dependencies>
 </project>
