--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -14,9 +14,9 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-oauth2</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-cloudfoundry-web</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.cloud</groupId>-->
+			<!--<artifactId>spring-cloud-cloudfoundry-web</artifactId>-->
+		<!--</dependency>-->
 	</dependencies>
 </project>
